syntax="proto3";

package proto;

option go_package="/proto";

//message contract
message AddRequest{
    int32 x = 1;
    int32 y = 2;
}

message AddResponse{
    int32 result = 1;
}

//server streaming
message PrimeRequest{
    int32 start=1;
    int32 end=2;
}

message PrimeResponse{
    int32 primeNo=1;
}


/* Client Streaming */
message AverageRequest{
    int32 no = 1;
}

message AverageResponse{
    int32 result = 1;
}

/* Bidirectional Streaming */
message PersonName{
    string firstName = 1;
    string lastName = 2;
}

message GreetRequest{
    PersonName person = 1;
}

message GreetResponse{
    string GreetMessage = 1;
}

//service contract
service AppService{

    //operation contracts
    //request & response
    rpc Add(AddRequest) returns (AddResponse);

    //server streaming
    rpc GeneratePrimes(PrimeRequest) returns (stream PrimeResponse);

    /* Client Streaming */
    rpc CalculateAverage(stream AverageRequest) returns (AverageResponse);

    /* Bidirectional Streaming */
    rpc Greet(stream GreetRequest) returns (stream GreetResponse);
}